--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
         <i class="fab fa-instagram mb-10"></i>
         <i class="fab fa-twitter mb-10"></i>
         <a href="#" onclick="showMenu()"><i class="fas fa-bars font-size-medium mb-10 "></i></a>
-        <ul id="Menunav" class="hidden">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Me</a></li>
-          <li><a href="#"></a>What I Do</li>
-          <li><a href="#">Resume</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Testimonial</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+        
       </div>
+      <ul id="Menunav" class="hidden menu-list">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">What I Do</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Testimonial</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -61,6 +62,14 @@
     =============================================== -->
     <div class="my-4">
       <h2 class="text-center">I am a full stack web developer <span class="text-greenlight">Yauris Carrillo</span></h2>
+    </div>
+    <div class="container">
+      <p>
+        I am a full stack web developer passionate about new technologies, my goal is to develop fully responsive sites with good practices so that your site is adaptable to your business and light so that large clients get answers immediately.
+      </p>
+      <p>
+        I develop in any project, no matter how difficult it is, there always has to be a solution for it that you need
+      </p>
     </div>
     
 </body>
