--- a/index.html
+++ b/index.html
@@ -146,28 +146,28 @@
       <div class="row">
         <div class="col-6 col-md-6 d-flex align-items-center">
             <a href=""><i class="fas fa-palette icon-greenlight m-3 fa-3x"></i></a>
-          <div class="">
+          <div>
             <h2>Desing</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quo veniam vitae nisi velit a possimus aspernatur nulla</p>
           </div>
         </div>
         <div class="col-6 col-md-6 d-flex align-items-center">
           <a href=""><i class="fas fa-desktop icon-greenlight m-3 fa-3x"></i></a>
-          <div class="">
+          <div>
             <h2>Web Desing</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quo veniam vitae nisi velit a possimus aspernatur nulla</p>
           </div>
         </div>
         <div class="col-6 col-md-6 d-flex align-items-center">
           <a href=""><i class="fas fa-pencil-ruler icon-greenlight m-3 fa-3x"></i></a>
-          <div class="">
+          <div>
             <h2>UI/UX Design</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quo veniam vitae nisi velit a possimus aspernatur nulla</p>
           </div>
         </div>
         <div class="col-6 col-md-6 d-flex align-items-center">
           <a href=""><i class="fas fa-bullhorn icon-greenlight m-3 fa-3x"></i></a>
-          <div class="">
+          <div>
             <h2>Seo Marketing</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quo veniam vitae nisi velit a possimus aspernatur nulla</p>
           </div>
@@ -182,6 +182,36 @@
       <div>
         <h2 class="p.absolute text-24 font-personalized-movil font-personalized-sm font-personalized-md font-personalized-lg">Summary</h2>
         <p class="p.absolute text-center mt-menos-center mt-menos-center-sm mt-menos-center-md font-size-medium font-size-sub">Resume<span class="sub-line border-small-green"></span></p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <!-- my education -->
+        <div class="col-sm-6">
+          <h2>My Education</h2>
+          <div class="sub-line-summary my-5 py-3 px-3">
+            <p class="badge d-inline-block text-white">1997-2003</p>
+            <h3>leading Institute</h3>
+            <p class="text-red">high school</p>
+            <p>hola bienvenido</p>
+          </div>
+          <div class="sub-line-summary my-5 py-3 px-3">
+            <p class="badge d-inline-block text-white">2006-2008</p>
+            <h3>pc technician</h3>
+            <p class="text-red">Institute Syspro</p>
+            <p>hola bienvenido</p>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <h2>My Experience</h2>
+          <div class="sub-line-summary my-5 py-3 px-3">
+            <p class="badge d-inline-block text-white">1997-2003</p>
+            <h3>leading institute</h3>
+            <p class="text-red">high school</p>
+            <p>hola bienvenido</p>
+          </div>
+        </div>
       </div>
     </div>
 </body>
