--- a/index.html
+++ b/index.html
@@ -211,7 +211,23 @@
             <p class="text-red">high school</p>
             <p>hola bienvenido</p>
           </div>
+          <div class="sub-line-summary my-5 py-3 px-3">
+            <p class="badge d-inline-block text-white">1997-2003</p>
+            <h3>leading institute</h3>
+            <p class="text-red">high school</p>
+            <p>hola bienvenido</p>
+          </div>
         </div>
+      </div>
+    </div>
+
+    <!-- ====================================================================================
+    My portfolio
+    ===================================================================================== -->
+    <div class="d-flex justify-content-center p-relative my-5">
+      <div>
+        <h2 class="p.absolute text-24 font-personalized-movil font-personalized-sm font-personalized-md font-personalized-lg">Portfolio</h2>
+        <p class="p.absolute text-center mt-menos-center mt-menos-center-sm mt-menos-center-md font-size-medium font-size-sub">My Work<span class="sub-line border-small-green"></span></p>
       </div>
     </div>
 </body>
