creando columnas para el portafolio

--- a/index.html
+++ b/index.html
@@ -230,5 +230,28 @@
         <p class="p.absolute text-center mt-menos-center mt-menos-center-sm mt-menos-center-md font-size-medium font-size-sub">My Work<span class="sub-line border-small-green"></span></p>
       </div>
     </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-4">
+          <img src="" alt="">
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <img src="" alt="">
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <img src="" alt="">
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <img src="" alt="">
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <img src="" alt="">
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <img src="" alt="">
+        </div>
+      </div>
+    </div>
 </body>
 </html>
