--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/styles.css">
+  <link rel="stylesheet" href="./assets/css/modern.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
   <script src="./assets/js/principal.js"></script>
   <title>My Portfolio</title>
@@ -234,7 +235,9 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-sm-6 col-md-4">
-          <img src="" alt="">
+          <div class="img-ecommerce">
+            <!-- aqui va el texto-->
+          </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <img src="" alt="">
