--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
         <div class="col-12 col-sm-6 col-md-4">
           <div class="img-ecommerce">
             <!-- aqui va el texto-->
+            jej
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
