--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 <body>
 
-  <header class="bg-dark">
+  <header class="bg-dark border-menu">
     <div class="container">
       <div class="row">
         <div class="col-12 col-sm-6">
           <h3 class="title-h1 text-center text-left-md py-3 text-white">Yauris Carrillo</h3>
         </div>
         <div class="col-12 col-sm-6 text-center text-right-md my-auto">
-          <a href="https://www.facebook.com/" class="text-white"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/" class="text-white mx-3"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-instagram text-white"></i></a>  
-          <a href="#"><i class="fab fa-twitter text-white"></i></a>
+          <a href="#"><i class="fab fa-twitter text-white mx-3"></i></a>
           <a href="#" onclick="showMenu()"><i class="fas fa-bars font-size-medium menu-hide-sm"></i></a>
         </div>
         <!--
@@ -37,22 +37,25 @@
     </div>
     
   </header>
-  <div class="container">
-    <div class="row">
-      <ul id="Menunav" class="hidden menu-list">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">What I Do</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Testimonial</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+
+  <nav class="bg-dark z1">
+    <div class="container">
+      <div class="row">
+        <ul id="Menunav" class="hidden menu-list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Me</a></li>
+          <li><a href="#">What I Do</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Testimonial</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
+  </nav>
   
   <!-- =================================
-    background firs
+    background first
   ========================================== -->
     <div class="programador-principal text-white p-relative">
       <div class="p-bg-absolute-dark text-center my-auto d-flex justify-content-center align-items-center">
@@ -240,21 +243,128 @@
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
-          <img src="" alt="" class="img-ecommerce p-relative">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
-          <img src="" alt="" class="img-ecommerce p-relative">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
-          <img src="" alt="">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
-          <img src="" alt="">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
-          <img src="" alt="">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
         </div>
       </div>
     </div>
+
+     <!-- ====================================================================================
+    My skills
+    ===================================================================================== -->
+    <div class="d-flex justify-content-center p-relative my-5">
+      <div>
+        <h2 class="p.absolute text-24 font-personalized-movil font-personalized-sm font-personalized-md font-personalized-lg">Skills</h2>
+        <p class="p.absolute text-center mt-menos-center mt-menos-center-sm mt-menos-center-md font-size-medium font-size-sub">My Abilities<span class="sub-line border-small-green"></span></p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-4">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <div class="img-ecommerce p-relative">
+            <!-- aqui va el texto-->
+            <p class="d-flex justify-content-center align-items-center"></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- =====================================================
+      contact
+      ======================================================= -->
+      <div class="d-flex justify-content-center p-relative my-5">
+        <div>
+          <h2 class="p.absolute text-24 font-personalized-movil font-personalized-sm font-personalized-md font-personalized-lg">Contact</h2>
+          <p class="p.absolute text-center mt-menos-center mt-menos-center-sm mt-menos-center-md font-size-medium font-size-sub">Get In Touch<span class="sub-line border-small-green"></span></p>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-3 col-md-3">
+            <h2>ADDRESS</h2>
+            <p>calle 65 sur # 43 - 105</p>
+            <p>ciudad: <span>Villavicencio - meta</span></p>            
+          </div>
+          <div class="col-12 col-sm-9 col-md-9">
+            <form action="" class="d-flex">
+              <input type="text" placeholder="Name">
+              <input type="email" placeholder="Email">
+              <textarea class="d-inline-bloc" placeholder="Tell us more about your needs..."></textarea>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <!-- ==========================================================================
+      footer 
+      =============================================================================== -->
+      <footer class="bg-dark py-3 mt-4">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <p>Copyright © 2020 Yauris Carrillo. All Rights Reserved.</p>
+            </div>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
