modificando el menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="https://www.facebook.com/" class="text-white mx-3"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-instagram text-white"></i></a>  
           <a href="#"><i class="fab fa-twitter text-white mx-3"></i></a>
-          <a href="#" onclick="showMenu()"><i class="fas fa-bars font-size-medium menu-hide-sm"></i></a>
+          <a href="#" onclick="showMenu()"><i class="fas fa-bars font-size-medium menu-hide-sm z1 text-white"></i></a>
         </div>
         <!--
         <ul id="Menunav" class="hidden menu-list">
@@ -38,7 +38,7 @@
     
   </header>
 
-  <nav class="bg-dark z1">
+  <nav class="bg-dark">
     <div class="container">
       <div class="row">
         <ul id="Menunav" class="hidden menu-list">
