--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           <div class="container">
             <div class="row">
               <ul id="Menunav" class="hidden menu-list">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">What I Do</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Testimonial</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#what-i-do">What I Do</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+          <!--  <li><a href="#">Testimonial</a></li> -->
+                <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -50,7 +50,7 @@
   ========================================== -->
     <div class="programador-principal text-white p-relative">
       <div class="p-bg-absolute-dark text-center my-auto d-flex justify-content-center align-items-center">
-        <div>
+        <div id="about">
           <h2 class="title-h1"> Programmer Full Stack</h2>
           <p class="text-paragrap">thinking in the future</p>
           <a href="#" class="d-inline-block text-paragrap my-5 text-decoration-0 text-greenlight border-whatsapp">Llámame</a>
@@ -130,7 +130,7 @@
       services
     ========================================================== -->
     <div class="d-flex justify-content-center p-relative my-5">
-      <div>
+      <div id="what-i-do">
         <h2 class="p.absolute text-24 font-personalized-movil font-personalized-sm font-personalized-md font-personalized-lg">Services</h2>
         <p class="p.absolute text-center mt-menos-center mt-menos-center-sm mt-menos-center-md font-size-medium font-size-sub">What I Do<span class="sub-line border-small-green"></span></p>
       </div>
@@ -173,7 +173,7 @@
     summary 
     =======================================================================-->
     <div class="d-flex justify-content-center p-relative my-5">
-      <div>
+      <div id="resume">
         <h2 class="p.absolute text-24 font-personalized-movil font-personalized-sm font-personalized-md font-personalized-lg">Summary</h2>
         <p class="p.absolute text-center mt-menos-center mt-menos-center-sm mt-menos-center-md font-size-medium font-size-sub">Resume<span class="sub-line border-small-green"></span></p>
       </div>
@@ -219,7 +219,7 @@
     My portfolio
     ===================================================================================== -->
     <div class="d-flex justify-content-center p-relative my-5">
-      <div>
+      <div id="portfolio">
         <h2 class="p.absolute text-24 font-personalized-movil font-personalized-sm font-personalized-md font-personalized-lg">Portfolio</h2>
         <p class="p.absolute text-center mt-menos-center mt-menos-center-sm mt-menos-center-md font-size-medium font-size-sub">My Work<span class="sub-line border-small-green"></span></p>
       </div>
@@ -322,7 +322,7 @@
       contact
       ======================================================= -->
       <div class="d-flex justify-content-center p-relative my-5">
-        <div>
+        <div id="contact">
           <h2 class="p.absolute text-24 font-personalized-movil font-personalized-sm font-personalized-md font-personalized-lg">Contact</h2>
           <p class="p.absolute text-center mt-menos-center mt-menos-center-sm mt-menos-center-md font-size-medium font-size-sub">Get In Touch<span class="sub-line border-small-green"></span></p>
         </div>
