solucionado el menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="https://www.facebook.com/" class="text-white mx-3"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-instagram text-white"></i></a>  
           <a href="#"><i class="fab fa-twitter text-white mx-3"></i></a>
-          <a href="#" onclick="showMenu()"><i class="fas fa-bars font-size-medium menu-hide-sm text-white"></i></a>
+          <a href="javascript:void()" onclick="showMenu()"><i class="fas fa-bars font-size-medium menu-hide-sm text-white"></i></a>
         </div>
         <nav class="bg-dark">
           <div class="container">
@@ -48,8 +48,8 @@
   <!-- =================================
     background first
   ========================================== -->
-    <div class="programador-principal text-white p-relative">
-      <div class="p-bg-absolute-dark text-center my-auto d-flex justify-content-center align-items-center">
+    <div class="programador-principal text-white p-relative mt-95">
+      <div class="p-bg-absolute-dark text-center my-auto d-flex justify-content-center height my-auto align-items-center">
         <div id="about">
           <h2 class="title-h1"> Programmer Full Stack</h2>
           <p class="text-paragrap">thinking in the future</p>
